--- a/pkg/crd/testdata/gen/foo_crd_v1.yaml
+++ b/pkg/crd/testdata/gen/foo_crd_v1.yaml
@@ -33,6 +33,7 @@ spec:
           metadata:
             type: object
           spec:
+            description: Spec comments SHOULD appear in the CRD spec
             properties:
               defaultedString:
                 default: fooDefaultString
@@ -43,6 +44,7 @@ spec:
             - defaultedString
             type: object
           status:
+            description: Status comments SHOULD appear in the CRD spec
             type: object
         type: object
     served: true
